Добавляет оформление хедера

--- a/index.html
+++ b/index.html
@@ -27,15 +27,21 @@
         <a href="" class="logo">Web<span class="accent">Studio</span></a>
         <nav>
           <ul class="site-nav list">
-            <li><a href="" class="link current">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
+            <li class="header-item"><a href="" class="link current">Студия</a></li>
+            <li class="header-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li class="header-item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="auth-nav list">
-          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
+        <div class="header-contact">
+          <ul class="auth-nav list">
+            <li class="auth-nav connect">
+              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            </li>
+            <li class="auth-nav connect">
+              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
