--- a/portfolio.html
+++ b/portfolio.html
@@ -25,121 +25,133 @@
   </head>
   <body class="page">
     <header class="header">
-      <a href="" class="logo link">Web<span class="accent">Studio</span></a>
-      <nav>
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="" class="link current">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul class="auth-nav list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
+      <div class="container">
+        <a href="" class="logo link">Web<span class="accent">Studio</span></a>
+        <nav>
+          <ul class="site-nav list">
+            <li class="header-item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="header-item"><a href="" class="link current">Портфолио</a></li>
+            <li class="header-item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <div class="header-contact">
+          <ul class="auth-nav list">
+            <li class="auth-nav connect">
+              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            </li>
+            <li class="auth-nav connect">
+              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
     <main>
       <section class="section-portfolio">
-        <h1 class="visually-hidden">Портфолио</h1>
-        <ul class="list">
-          <li><button type="button" class="list-button">Все</button></li>
-          <li><button type="button" class="list-button">Веб-сайты</button></li>
-          <li><button type="button" class="list-button">Приложения</button></li>
-          <li><button type="button" class="list-button">Дизайн</button></li>
-          <li><button type="button" class="list-button">Маркетинг</button></li>
-        </ul>
-        <ul class="list">
-          <li>
-            <a href="" class="link">
-              <img src="./images/project_1.jpg" alt="Технокряк" width="370" />
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p class="portfolio-text">Веб-сайт</p>
-            </a>
-          </li>
+        <div class="container">
+          <h1 class="visually-hidden">Портфолио</h1>
+          <ul class="list">
+            <li><button type="button" class="list-button">Все</button></li>
+            <li><button type="button" class="list-button">Веб-сайты</button></li>
+            <li><button type="button" class="list-button">Приложения</button></li>
+            <li><button type="button" class="list-button">Дизайн</button></li>
+            <li><button type="button" class="list-button">Маркетинг</button></li>
+          </ul>
+          <ul class="list">
+            <li>
+              <a href="" class="link">
+                <img src="./images/project_1.jpg" alt="Технокряк" width="370" />
+                <h2 class="portfolio-title">Технокряк</h2>
+                <p class="portfolio-text">Веб-сайт</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="link">
-              <img src="./images/project_2.jpg" alt="Постер" width="370" />
-              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-text">Дизайн</p>
-            </a>
-          </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/project_2.jpg" alt="Постер" width="370" />
+                <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                <p class="portfolio-text">Дизайн</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="link">
-              <img src="./images/project_3.jpg" alt="Ресторан" width="370" />
-              <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p class="portfolio-text">Приложение</p>
-            </a>
-          </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/project_3.jpg" alt="Ресторан" width="370" />
+                <h2 class="portfolio-title">Ресторан Seafood</h2>
+                <p class="portfolio-text">Приложение</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="link">
-              <img src="./images/project_4.jpg" alt="Проект Prime" width="370" />
-              <h2 class="portfolio-title">Проект Prime</h2>
-              <p class="portfolio-text">Маркетинг</p>
-            </a>
-          </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/project_4.jpg" alt="Проект Prime" width="370" />
+                <h2 class="portfolio-title">Проект Prime</h2>
+                <p class="portfolio-text">Маркетинг</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="link">
-              <img src="./images/project_5.jpg" alt="Проект Boxes" width="370" />
-              <h2 class="portfolio-title">Проект Boxes</h2>
-              <p class="portfolio-text">Приложение</p>
-            </a>
-          </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/project_5.jpg" alt="Проект Boxes" width="370" />
+                <h2 class="portfolio-title">Проект Boxes</h2>
+                <p class="portfolio-text">Приложение</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="link">
-              <img src="./images/project_6.jpg" alt="Inspiration" width="370" />
-              <h2 class="portfolio-title">Inspiration has no Borders</h2>
-              <p class="portfolio-text">Веб-сайт</p>
-            </a>
-          </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/project_6.jpg" alt="Inspiration" width="370" />
+                <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                <p class="portfolio-text">Веб-сайт</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="link">
-              <img src="./images/project_7.jpg" alt="Издание" width="370" />
-              <h2 class="portfolio-title">Издание Limited Edition</h2>
-              <p class="portfolio-text">Дизайн</p>
-            </a>
-          </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/project_7.jpg" alt="Издание" width="370" />
+                <h2 class="portfolio-title">Издание Limited Edition</h2>
+                <p class="portfolio-text">Дизайн</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="link">
-              <img src="./images/project_8.jpg" alt="Проект LAB" width="370" />
-              <h2 class="portfolio-title">Проект LAB</h2>
-              <p class="portfolio-text">Маркетинг</p>
-            </a>
-          </li>
+            <li>
+              <a href="" class="link">
+                <img src="./images/project_8.jpg" alt="Проект LAB" width="370" />
+                <h2 class="portfolio-title">Проект LAB</h2>
+                <p class="portfolio-text">Маркетинг</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="link">
-              <img src="./images/project_9.jpg" alt="Growing Business" width="370" />
-              <h2 class="portfolio-title">Growing Business</h2>
-              <p class="portfolio-text">Приложение</p>
-            </a>
-          </li>
-        </ul>
+            <li>
+              <a href="" class="link">
+                <img src="./images/project_9.jpg" alt="Growing Business" width="370" />
+                <h2 class="portfolio-title">Growing Business</h2>
+                <p class="portfolio-text">Приложение</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="" class="logo">Web<span class="accent">Studio</span></a>
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              href="https://goo.gl/maps/j5cMVpiyJiaoKH5t6"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="address"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li><a href="mailto:info@example.com" class="contact">info@example.com</a></li>
-          <li><a href="tel:+380991111111" class="contact">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="" class="logo">Web<span class="accent">Studio</span></a>
+        <address>
+          <ul class="list">
+            <li>
+              <a
+                href="https://goo.gl/maps/j5cMVpiyJiaoKH5t6"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="address"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li><a href="mailto:info@example.com" class="contact">info@example.com</a></li>
+            <li><a href="tel:+380991111111" class="contact">+38 099 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
