Завершает оформление геометрии страницы

--- a/index.html
+++ b/index.html
@@ -53,27 +53,27 @@
       </section>
       <section class="feature">
         <div class="container">
-          <h2 hidden>Особенности</h2>
-          <ul class="list">
-            <li>
+          <h2 class="visually-hidden">Особенности</h2>
+          <ul class="feature-list list">
+            <li class="feature-item">
               <h3 class="feature-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="feature-title">ПУНКТУАЛЬНОСТЬ</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="feature-title">ПЛАНИРОВАНИЕ</h3>
               <p>
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="feature-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
@@ -83,20 +83,24 @@
       <section class="sections">
         <div class="container">
           <h2 class="sections-title">Чем мы занимаемся</h2>
-          <ul class="list">
-            <li><img src="./images/box_1.jpg" alt="верстка сайта" width="370" height="294" /></li>
-            <li>
+          <ul class="about-list list">
+            <li class="about-item">
+              <img src="./images/box_1.jpg" alt="верстка сайта" width="370" height="294" />
+            </li>
+            <li class="about-item">
               <img src="./images/box_2.jpg" alt="мобильные приложения" width="370" height="294" />
             </li>
-            <li><img src="./images/box_3.jpg" alt="подбор цвета" width="370" height="294" /></li>
+            <li class="about-item">
+              <img src="./images/box_3.jpg" alt="подбор цвета" width="370" height="294" />
+            </li>
           </ul>
         </div>
       </section>
       <section class="staff">
         <div class="container">
           <h2 class="sections-title">Наша команда</h2>
-          <ul class="list">
-            <li>
+          <ul class="staff-list list">
+            <li class="staff-item">
               <img
                 src="./images/staff_1.jpg"
                 alt="Игорь Демьяненко"
@@ -104,10 +108,12 @@
                 height="260"
                 class="staff-img"
               />
-              <h3 class="staff-title">Игорь Демьяненко</h3>
-              <p lang="en" class="staff-position">Product Designer</p>
+              <div class="position-item">
+                <h3 class="staff-title">Игорь Демьяненко</h3>
+                <p lang="en" class="staff-position">Product Designer</p>
+              </div>
             </li>
-            <li>
+            <li class="staff-item">
               <img
                 src="./images/staff_2.jpg"
                 alt="Ольга Репина"
@@ -115,10 +121,12 @@
                 height="260"
                 class="staff-img"
               />
-              <h3 class="staff-title">Ольга Репина</h3>
-              <p lang="en" class="staff-position">Frontend Developer</p>
+              <div class="position-item">
+                <h3 class="staff-title">Ольга Репина</h3>
+                <p lang="en" class="staff-position">Frontend Developer</p>
+              </div>
             </li>
-            <li>
+            <li class="staff-item">
               <img
                 src="./images/staff_3.jpg"
                 alt="Николай Тарасов"
@@ -126,10 +134,12 @@
                 height="260"
                 class="staff-img"
               />
-              <h3 class="staff-title">Николай Тарасов</h3>
-              <p lang="en" class="staff-position">Marketing</p>
+              <div class="position-item">
+                <h3 class="staff-title">Николай Тарасов</h3>
+                <p lang="en" class="staff-position">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="staff-item">
               <img
                 src="./images/staff_4.jpg"
                 alt="Михаил Ермаков"
@@ -137,8 +147,10 @@
                 height="260"
                 class="staff-img"
               />
-              <h3 class="staff-title">Михаил Ермаков</h3>
-              <p lang="en" class="staff-position">UI Designer</p>
+              <div class="position-item">
+                <h3 class="staff-title">Михаил Ермаков</h3>
+                <p lang="en" class="staff-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -148,8 +160,8 @@
       <div class="container">
         <a href="" class="logo">Web<span class="accent">Studio</span></a>
         <address>
-          <ul class="list">
-            <li>
+          <ul class="footer-list list">
+            <li class="footer-item">
               <a
                 href="https://goo.gl/maps/j5cMVpiyJiaoKH5t6"
                 target="_blank"
@@ -158,8 +170,12 @@
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li><a href="mailto:info@example.com" class="contact">info@example.com</a></li>
-            <li><a href="tel:+380991111111" class="contact">+38 099 111 11 11</a></li>
+            <li class="footer-item">
+              <a href="mailto:info@example.com" class="contact">info@example.com</a>
+            </li>
+            <li class="footer-item">
+              <a href="tel:+380991111111" class="contact">+38 099 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
