--- a/portfolio.html
+++ b/portfolio.html
@@ -50,83 +50,101 @@
       <section class="section-portfolio">
         <div class="container">
           <h1 class="visually-hidden">Портфолио</h1>
-          <ul class="list">
-            <li><button type="button" class="list-button">Все</button></li>
-            <li><button type="button" class="list-button">Веб-сайты</button></li>
-            <li><button type="button" class="list-button">Приложения</button></li>
-            <li><button type="button" class="list-button">Дизайн</button></li>
-            <li><button type="button" class="list-button">Маркетинг</button></li>
+          <ul class="btn-list list">
+            <li class="btn-item"><button type="button" class="list-button">Все</button></li>
+            <li class="btn-item"><button type="button" class="list-button">Веб-сайты</button></li>
+            <li class="btn-item"><button type="button" class="list-button">Приложения</button></li>
+            <li class="btn-item"><button type="button" class="list-button">Дизайн</button></li>
+            <li class="btn-item"><button type="button" class="list-button">Маркетинг</button></li>
           </ul>
-          <ul class="list">
-            <li>
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/project_1.jpg" alt="Технокряк" width="370" />
-                <h2 class="portfolio-title">Технокряк</h2>
-                <p class="portfolio-text">Веб-сайт</p>
+                <div class="image-item">
+                  <h2 class="portfolio-title">Технокряк</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
               </a>
             </li>
 
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/project_2.jpg" alt="Постер" width="370" />
-                <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                <p class="portfolio-text">Дизайн</p>
+                <div class="image-item">
+                  <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
               </a>
             </li>
 
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/project_3.jpg" alt="Ресторан" width="370" />
-                <h2 class="portfolio-title">Ресторан Seafood</h2>
-                <p class="portfolio-text">Приложение</p>
+                <div class="image-item">
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
               </a>
             </li>
 
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/project_4.jpg" alt="Проект Prime" width="370" />
-                <h2 class="portfolio-title">Проект Prime</h2>
-                <p class="portfolio-text">Маркетинг</p>
+                <div class="image-item">
+                  <h2 class="portfolio-title">Проект Prime</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
               </a>
             </li>
 
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/project_5.jpg" alt="Проект Boxes" width="370" />
-                <h2 class="portfolio-title">Проект Boxes</h2>
-                <p class="portfolio-text">Приложение</p>
+                <div class="image-item">
+                  <h2 class="portfolio-title">Проект Boxes</h2>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
               </a>
             </li>
 
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/project_6.jpg" alt="Inspiration" width="370" />
-                <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                <p class="portfolio-text">Веб-сайт</p>
+                <div class="image-item">
+                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
               </a>
             </li>
 
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/project_7.jpg" alt="Издание" width="370" />
-                <h2 class="portfolio-title">Издание Limited Edition</h2>
-                <p class="portfolio-text">Дизайн</p>
+                <div class="image-item">
+                  <h2 class="portfolio-title">Издание Limited Edition</h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
               </a>
             </li>
 
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/project_8.jpg" alt="Проект LAB" width="370" />
-                <h2 class="portfolio-title">Проект LAB</h2>
-                <p class="portfolio-text">Маркетинг</p>
+                <div class="image-item">
+                  <h2 class="portfolio-title">Проект LAB</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
               </a>
             </li>
 
-            <li>
+            <li class="portfolio-item">
               <a href="" class="link">
                 <img src="./images/project_9.jpg" alt="Growing Business" width="370" />
-                <h2 class="portfolio-title">Growing Business</h2>
-                <p class="portfolio-text">Приложение</p>
+                <div class="image-item">
+                  <h2 class="portfolio-title">Growing Business</h2>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
               </a>
             </li>
           </ul>
@@ -137,8 +155,8 @@
       <div class="container">
         <a href="" class="logo">Web<span class="accent">Studio</span></a>
         <address>
-          <ul class="list">
-            <li>
+          <ul class="footer-list list">
+            <li class="footer-item">
               <a
                 href="https://goo.gl/maps/j5cMVpiyJiaoKH5t6"
                 target="_blank"
@@ -147,8 +165,12 @@
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li><a href="mailto:info@example.com" class="contact">info@example.com</a></li>
-            <li><a href="tel:+380991111111" class="contact">+38 099 111 11 11</a></li>
+            <li class="footer-item">
+              <a href="mailto:info@example.com" class="contact">info@example.com</a>
+            </li>
+            <li class="footer-item">
+              <a href="tel:+380991111111" class="contact">+38 099 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
