--- a/index.html
+++ b/index.html
@@ -32,16 +32,14 @@
             <li class="header-item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
-        <div class="header-contact">
-          <ul class="auth-nav list">
-            <li class="auth-nav connect">
-              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-            </li>
-            <li class="auth-nav connect">
-              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="auth-nav list">
+          <li class="auth-nav connect">
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          </li>
+          <li class="auth-nav connect">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </div>
     </header>
     <main>
@@ -159,8 +157,8 @@
     <footer class="footer">
       <div class="container">
         <a href="" class="logo">Web<span class="accent">Studio</span></a>
-        <address>
-          <ul class="footer-list list">
+        <address class="footer-list">
+          <ul class="list">
             <li class="footer-item">
               <a
                 href="https://goo.gl/maps/j5cMVpiyJiaoKH5t6"
